feat: Python syntax review

--- a/CS1108-25春-Python入门.ipynb
+++ b/CS1108-25春-Python入门.ipynb
@@ -2913,6 +2913,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4904bcdc-17e6-4517-bf8f-b6bf77576181",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'type'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(ValueError))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "211fcd71-3e97-454e-8c3e-2fa62c1a5426",
    "metadata": {},
