feat: Python syntax review

--- a/CS1108-25春-Python入门.ipynb
+++ b/CS1108-25春-Python入门.ipynb
@@ -2688,16 +2688,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d61ab2b-64a5-4477-9916-c490b9dc96cc",
-   "metadata": {},
-   "source": [
-    "**关键字参数** 和 **默认参数** 有点像双胞胎\n",
-    "- 关键字参数：是函数调用时的观念，在函数调用时specify出等号右边的值该assign给函数定义时的哪个必要参数，如此一来传入的参数不需要按照函数定义的方式pass in\n",
-    "- 默认参数：是函数定义时的观念，用来预防用户没有传入该传入的参数 -> 用预设的"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "4622ce35-b7d7-403f-989d-148ce4d7ede4",
    "metadata": {},
    "source": [
@@ -2797,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "7ff50777-4775-436a-8722-6930d691f3e4",
    "metadata": {},
    "outputs": [],
@@ -2813,7 +2803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "18d947b2-435f-40d1-b2d6-a9f6177a782f",
    "metadata": {},
    "outputs": [
@@ -2832,102 +2822,6 @@
    ],
    "source": [
     "printinfo('sjtu',year = 1896,location = 'Minhang') # 會用字典的形式把東西打包"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4710ad7b-f57f-484b-a3d6-3195e77ae2d9",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "printinfo() takes 1 positional argument but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mprintinfo\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msjtu\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1896\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMinhang\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# <- 这种写法就会报错, 因为**kwargs的部分都要打包成键值对的形式\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: printinfo() takes 1 positional argument but 3 were given"
-     ]
-    }
-   ],
-   "source": [
-    "printinfo('sjtu', 1896, 'Minhang') # <- 这种写法就会报错, 因为**kwargs的部分都要打包成键值对的形式"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0cadc19b-592a-4205-8212-dd33444a16f6",
-   "metadata": {},
-   "source": [
-    "## 异常处理模块"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c837b38-99e4-49c3-a1fa-57dc4f714814",
-   "metadata": {},
-   "source": [
-    "上面显示`printinfo('sjtu', 1896, 'Minhang')`这种调用函数的方式是错误的，那有没有一种方式可以让program不要整个死掉停摆？"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "74a8531b-2534-4301-918b-45560e8db4e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def printinfo(arg1, **kwargs):\n",
-    "    print(arg1)\n",
-    "    print(kwargs)\n",
-    "    print(type(kwargs))\n",
-    "    for key, value in kwargs.items():\n",
-    "        print(f\"{key}: {value}\")\n",
-    "    print(kwargs['location'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "35db917f-d9d1-4a9f-9a81-37050de5a8c5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It's TypeError\n",
-      "It's TypeError\n",
-      "It's TypeError\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(3):\n",
-    "    try:\n",
-    "        printinfo('sjtu', 1896, 'Minhang')\n",
-    "    except TypeError:\n",
-    "        print(\"It's TypeError\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "4904bcdc-17e6-4517-bf8f-b6bf77576181",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'type'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(ValueError))"
    ]
   },
   {
@@ -2986,19 +2880,19 @@
     "Python从设计之初就已经是一门面向对象的语言，正因为如此，在Python中创建一个类和对象是很容易的。\n",
     "如果以前没有接触过面向对象的编程语言，那我们可能需要先了解一些面向对象思想的一些基本知识。\n",
     "\n",
-    "* **类:** 用来描述具有相同的属性和方法的对象的集合。它定义了该集合中每个对象所共有的属性和方法。对象是类的实例。 \n",
+    "* **类**: 用来描述具有相同的属性和方法的对象的集合。它定义了该集合中每个对象所共有的属性和方法。对象是类的实例。 \n",
     " \n",
     " \n",
-    "* **类变量：**类变量在整个实例化的对象中是公用的。类变量定义在类中且在函数体之外。类变量通常不作为实例变量使用。 \n",
+    "* **类变量**: 类变量在整个实例化的对象中是公用的。类变量定义在类中且在函数体之外。类变量通常不作为实例变量使用。 \n",
     "\n",
     "\n",
-    "* **类方法：**类中定义的函数。\n",
+    "* **类方法**: 类中定义的函数。\n",
     "\n",
     "\n",
-    "* **实例化：**创建一个类的实例，类的具体对象。 \n",
+    "* **实例化**: 创建一个类的实例，类的具体对象。 \n",
     " \n",
     " \n",
-    "* **对象：**通过类定义的数据结构实例。对象包括两个数据成员（类变量和实例变量）和方法。 "
+    "* **对象**: 通过类定义的数据结构实例。对象包括两个数据成员（类变量和实例变量）和方法。 "
    ]
   },
   {
@@ -3167,13 +3061,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "dfb2bc34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'encrypt_account_a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[105], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mencrypt_account_a\u001b[49m\u001b[38;5;241m.\u001b[39mcheck_balance()  \n\u001b[0;32m      2\u001b[0m encrypt_account_b\u001b[38;5;241m.\u001b[39mcheck_balance()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'encrypt_account_a' is not defined"
+     ]
+    }
+   ],
    "source": [
     "encrypt_account_a.check_balance()  \n",
     "encrypt_account_b.check_balance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "0b138e02-1bc0-4f5e-8cb4-38323111412f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " chen\n",
+      " qi\n",
+      " xuan\n",
+      " chen2\n"
+     ]
+    },
+    {
+     "ename": "ChenError",
+     "evalue": "Invalid input: chen2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mChenError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[107], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m cur_input \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cur_input \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m cur_list:\n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ChenError(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mInvalid input: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(cur_input))\n",
+      "\u001b[1;31mChenError\u001b[0m: Invalid input: chen2"
+     ]
+    }
+   ],
+   "source": [
+    "class ChenError(ValueError): # <- 这里好像是'继承'\n",
+    "    pass\n",
+    "cur_list = ['chen', 'qi', 'xuan']\n",
+    "while True:\n",
+    "    cur_input = input()\n",
+    "    if cur_input not in cur_list:\n",
+    "        raise ChenError('Invalid input: {}'.format(cur_input))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cc367bb-15e9-44b3-ae9a-453acf4e2dae",
+   "metadata": {},
+   "source": [
+    "这边再介绍一个异常处理模块的关键字 -> `finally` -> 不管前面的`try` `excpet`执行结果如何 均会执行`finally` block里面的东西"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "0bf05ae7-33b2-4f2f-aa78-538c41e6e08a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finally\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[112], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m----> 2\u001b[0m     a \u001b[38;5;241m=\u001b[39m \u001b[38;5;241;43m1\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfinally\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a = 1/0\n",
+    "finally:\n",
+    "    print('finally')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4d939be-8d84-4249-b7ee-c194d40ca4b2",
+   "metadata": {},
+   "source": [
+    "# 文本操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "d2f4be12-ec13-4466-bd92-a1fc4db2e91f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "txt = open('./data/foo.txt') # txt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "04af915e-b6eb-4d23-be7f-3742d37b4f1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello python\n",
+      "chen qi xuan\n",
+      "jin tian tian qi bu cuo\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt_read = txt.read()\n",
+    "print(txt_read)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "928b8837-f147-4f57-b66d-6acc00a49140",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello python\\n', 'chen qi xuan\\n', 'jin tian tian qi bu cuo\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt_read2 = txt.readlines()\n",
+    "print(txt_read2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "4e5bd60e-4d70-4309-a517-23537b54b9c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "txt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "332fdf5a-a4a4-4bdf-b743-7624f67dbf70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "txt = open('./data/foo.txt', 'w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "6e76f573-f25a-4fe1-b03f-2229140924b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    for i in range(100):\n",
+    "        10/(i - 50)\n",
+    "        txt.write(str(i) + '\\n')\n",
+    "except Exception:\n",
+    "    print('error:', i)\n",
+    "finally:\n",
+    "    txt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3138bbc-dfde-4f6e-b964-f7497644afdc",
+   "metadata": {},
+   "source": [
+    "上下两种方式是等价的，一般Python里面常用的为下面的写法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "ec022851-9169-4686-a331-9c0448408787",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('foo.txt','w') as f:\n",
+    "    f.write('jin tian tian qi bu cuo')"
    ]
   },
   {
