feat: Python time module familarization

--- a/CS1108-25春-Python入门.ipynb
+++ b/CS1108-25春-Python入门.ipynb
@@ -981,17 +981,17 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "| 数字       | 格式     | 输出       | 描述                     |\r\n",
-    "|------------|----------|------------|--------------------------|\r\n",
-    "| 3.1415926  | {:.2f}   | 3.14       | 保留小数点后两位         |\r\n",
-    "| 3.1415926  | {:+.2f}  | +3.14      | 带符号保留小数点后两位   |\r\n",
-    "| -1         | {:-.2f}  | -1.00      | 带符号保留小数点后两位   |\r\n",
-    "| 2.71828    | {:.0f}   | 3          | 不带小数                 |\r\n",
-    "| 5          | {:0>2d}  | 05         | 数字补零 (填充左边, 宽度为2) |\r\n",
-    "| 5          | {:x<4d}  | 5xxx       | 数字补x (填充右边, 宽度为4) |\r\n",
-    "| 10         | {:x<4d}  | 10xx       | 数字补x (填充右边, 宽度为4) |\r\n",
-    "| 1000000    | {:,}     | 1,000,000  | 以逗号分隔的数字格式     |\r\n",
-    "| 0.25       | {:.2%}   | 25.00%     | 百分比格式               |\r\n",
+    "| 数字       | 格式     | 输出       | 描述                     |\n",
+    "|------------|----------|------------|--------------------------|\n",
+    "| 3.1415926  | {:.2f}   | 3.14       | 保留小数点后两位         |\n",
+    "| 3.1415926  | {:+.2f}  | +3.14      | 带符号保留小数点后两位   |\n",
+    "| -1         | {:-.2f}  | -1.00      | 带符号保留小数点后两位   |\n",
+    "| 2.71828    | {:.0f}   | 3          | 不带小数                 |\n",
+    "| 5          | {:0>2d}  | 05         | 数字补零 (填充左边, 宽度为2) |\n",
+    "| 5          | {:x<4d}  | 5xxx       | 数字补x (填充右边, 宽度为4) |\n",
+    "| 10         | {:x<4d}  | 10xx       | 数字补x (填充右边, 宽度为4) |\n",
+    "| 1000000    | {:,}     | 1,000,000  | 以逗号分隔的数字格式     |\n",
+    "| 0.25       | {:.2%}   | 25.00%     | 百分比格式               |\n",
     "| 1000000000 | {:.2e}   | 1.00e+09   | 指数记法       (宽度为10)      |"
    ]
   },
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "d71d1db2-fa9d-46d0-83bc-6b753220f868",
    "metadata": {},
    "outputs": [
@@ -1999,13 +1999,13 @@
        "{0, 1}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set_b ={0,1,1}\n",
+    "set_b ={0,1,1} # note: set是Python的基础资料结构， 你写大括号包东西就会被编译器解释成set\n",
     "set_b"
    ]
   },
@@ -3089,7 +3089,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " chen\n",
@@ -3864,8 +3864,8 @@
     "\n",
     "\n",
     "```\n",
-    "linear_interpolation([1, 2, 3], [2, 3, 5], 2.5) = 4.0\r\n",
-    "linear_interpolation([0, 10], [0, 10], 5) = 5.0\r\n",
+    "linear_interpolation([1, 2, 3], [2, 3, 5], 2.5) = 4.0\n",
+    "linear_interpolation([0, 10], [0, 10], 5) = 5.0\n",
     "linear_interpolation([1, 2, 3], [2, 3, 5], 0) = None\n",
     "```"
    ]
@@ -4091,9 +4091,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "myenv",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
